--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,9 +3,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-SET(SOURCE
-  main.cpp
-)
-
-add_executable(Main ${SOURCE})
-target_link_libraries(Main Companion)
+add_executable(2DObjectDetection 2DObjectDetection.cpp)
+target_link_libraries(2DObjectDetection Companion)
