Squash request (cleaned) (#4)
* Added export API
- defined all classes/enums/functions/... to be exported if shared library is build (DLL)

--- a/libCompanion/companion/CMakeLists.txt
+++ b/libCompanion/companion/CMakeLists.txt
@@ -22,7 +22,8 @@ SET(SOURCE
         thread/StreamWorker.cpp thread/StreamWorker.h
         util/CompanionError.h
         util/Util.cpp util/Util.h
-        util/Definitions.h)
+        util/Definitions.h
+        util/exportapi/ExportAPIDefinitions.h)
 
 if(USE_CUDA)
     SET(SOURCE ${SOURCE}
