--- a/libCompanion/CMakeLists.txt
+++ b/libCompanion/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_subdirectory(companion)
-target_include_directories (Companion PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories (Companion PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>  
+    $<INSTALL_INTERFACE:include>  # <prefix>/include
+)
