--- a/libCompanion/companion/CMakeLists.txt
+++ b/libCompanion/companion/CMakeLists.txt
@@ -3,6 +3,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
+
+# Add source files
 SET(SOURCE
         Companion.cpp Companion.h
         algo/abstract/ImageRecognition.h
@@ -24,12 +26,23 @@ SET(SOURCE
         util/Util.cpp util/Util.h
         util/Definitions.h
         util/exportapi/ExportAPIDefinitions.h)
-
 if(USE_CUDA)
     SET(SOURCE ${SOURCE}
             algo/cuda/CudaFeatureMatching.cpp algo/cuda/CudaFeatureMatching.h)
 endif()
 
+
+# Create MSVC filter
+if (MSVC)
+    foreach(source IN LISTS SOURCE)
+        get_filename_component(source_path "${source}" PATH)
+        string(REPLACE "/" "\\" source_path_msvc "${source_path}")
+        source_group("${source_path_msvc}" FILES "${source}")
+    endforeach()
+endif()
+
+
+# Create library and set linked libraries
 add_library(Companion ${SOURCE})
 target_link_libraries(Companion ${OpenCV_LIBS})
 
