--- a/testing/svm/CMakeLists.txt
+++ b/testing/svm/CMakeLists.txt
@@ -1,3 +1,10 @@
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+
+# Create executable and set linked libraries
 add_executable(SVM svm.cpp)
 target_link_libraries(SVM ${OpenCV_LIBS})
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+
+# Add target properties
+set_property(TARGET SVM PROPERTY FOLDER "libCompanion/testing")
