--- a/testing/rectangleDetection/CMakeLists.txt
+++ b/testing/rectangleDetection/CMakeLists.txt
@@ -1,3 +1,10 @@
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+
+# Create executable and set linked libraries
 add_executable(RectangleDetection RectangleDetection.cpp)
 target_link_libraries(RectangleDetection ${OpenCV_LIBS})
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+
+# Add target properties
+set_property(TARGET RectangleDetection PROPERTY FOLDER "libCompanion/testing")
