--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,21 @@
+#
+# This program is an image recognition library written with OpenCV.
+# Copyright (C) 2016-2017 Andreas Sekulski
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+
 # Set installation directory for WIN32 (on UNIX '/usr/local' should be the default)
 if(WIN32)
     set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install" CACHE PATH "Installation Directory")
@@ -43,9 +61,7 @@ find_package(OpenMP REQUIRED)
 # Configure libCompanion
 add_subdirectory(libCompanion)
 
-
 # Configure additional modules
 if(NOT WINDOWS_STORE)
-    add_subdirectory(main)
-    add_subdirectory(testing)
+    add_subdirectory(samples)
 endif()
