--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
+build*/
 cmake-build-debug/
 *.kdev4
 *~
