--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ option(Companion_BUILD_SHARED_LIBRARY "Build libCompanion as shared library" OFF
 if(NOT WINDOWS_STORE)
     option(Companion_BUILD_SAMPLES "Build all companion samples" OFF)
     option(Companion_USE_CUDA "Use cuda implementation of libCompanion" OFF)
+    add_definitions(-DCompanion_USE_CUDA=${Companion_USE_CUDA})
 endif()
 
 
@@ -58,7 +59,7 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set(OpenCVComponents "core" "imgproc" "imgcodecs" "features2d" "videoio" "calib3d")
 if(Companion_USE_CUDA)
     set(OpenCVComponents ${OpenCVComponents} "cudafeatures2d")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D Companion_USE_CUDA")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 endif()
 find_package(OpenCV REQUIRED ${OpenCVComponents})
 find_package(OpenMP REQUIRED)
