--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,10 +77,10 @@ add_subdirectory(libCompanion)
 
 # Configure to build additional modules
 if(Companion_BUILD_SAMPLES)
-    if(IS_DIRECTORY "${PROJECT_SOURCE_DIR}/libCompanionSamples")
-        add_subdirectory(libCompanionSamples)
-    else()
-        set(Companion_SAMPLE_MODULE "Path_to_Samples_Module" CACHE PATH "Sample module path")
+	if(EXISTS "${PROJECT_SOURCE_DIR}/libCompanionSamples/CMakeLists.txt")
+		add_subdirectory(libCompanionSamples)
+	else()
+		set(Companion_SAMPLE_MODULE "Path_to_Samples_Module" CACHE PATH "Sample module path")
         add_subdirectory(${Companion_SAMPLE_MODULE} samples)
-    endif()
+	endif()
 endif()
