C++17 Nested-namespace-definition and code refactoring

--- a/libCompanion/companion/CMakeLists.txt
+++ b/libCompanion/companion/CMakeLists.txt
@@ -17,24 +17,28 @@
 #
 
 if(UNIX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 endif()
+
+if(MSVC)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++latest")
+endif(MSVC)
 
 # Add source files
 set(SOURCE
         Configuration.cpp Configuration.h
-        algo/abstract/ImageRecognition.h
-        algo/abstract/Matching.h
-        algo/2D/FeatureMatching.cpp algo/2D/FeatureMatching.h
-        algo/2D/ShapeDetection.cpp algo/2D/ShapeDetection.h
-        algo/util/IRA.cpp algo/util/IRA.h
+        algo/ImageRecognition.h
+        algo/matching/Matching.h
+        algo/matching/FeatureMatching.cpp algo/matching/FeatureMatching.h
+        algo/detection/ShapeDetection.cpp algo/detection/ShapeDetection.h
+        algo/matching/util/IRA.cpp algo/matching/util/IRA.h
         draw/Drawable.h
         draw/Frame.cpp draw/Frame.h
         draw/Line.cpp draw/Line.h
         model/processing/FeatureMatchingModel.cpp model/processing/FeatureMatchingModel.h
-        model/result/Result.cpp model/result/Result.h
+        model/Result.cpp model/Result.h
         processing/ImageProcessing.h
-        processing/2D/FeatureDetection.cpp processing/2D/FeatureDetection.h
+        processing/FeatureDetection.cpp processing/FeatureDetection.h
         input/Stream.h
         input/Video.cpp input/Video.h
         input/Image.cpp input/Image.h
@@ -42,7 +46,7 @@ set(SOURCE
         util/CompanionError.h
         util/Util.cpp util/Util.h
         util/Definitions.h
-        util/exportapi/ExportAPIDefinitions.h model/processing/ImageHashModel.cpp model/processing/ImageHashModel.h processing/2D/HashDetection.cpp processing/2D/HashDetection.h)
+        util/exportapi/ExportAPIDefinitions.h model/processing/ImageHashModel.cpp model/processing/ImageHashModel.h processing/HashDetection.cpp processing/HashDetection.h)
 
 # Create MSVC filter
 if(MSVC)
