--- a/libCompanion/companion/CMakeLists.txt
+++ b/libCompanion/companion/CMakeLists.txt
@@ -23,30 +23,36 @@ endif()
 # Add source files
 set(SOURCE
         Configuration.cpp Configuration.h
-        algo/ImageRecognition.h
-        algo/matching/Matching.h
-        algo/matching/FeatureMatching.cpp algo/matching/FeatureMatching.h
+        algo/detection/Detection.h
         algo/detection/ShapeDetection.cpp algo/detection/ShapeDetection.h
-        algo/matching/util/IRA.cpp algo/matching/util/IRA.h
+        algo/recognition/Recognition.h
+        algo/recognition/hashing/Hashing.h 
+        algo/recognition/hashing/LSH.cpp algo/recognition/hashing/LSH.h
+        algo/recognition/matching/Matching.h
+        algo/recognition/matching/FeatureMatching.cpp algo/recognition/matching/FeatureMatching.h
+        algo/recognition/matching/util/IRA.cpp algo/recognition/matching/util/IRA.h
         draw/Drawable.h
         draw/Frame.cpp draw/Frame.h
         draw/Line.cpp draw/Line.h
-        model/processing/FeatureMatchingModel.cpp model/processing/FeatureMatchingModel.h
-        model/Result.cpp model/Result.h
-        processing/ImageProcessing.h
-        processing/FeatureDetection.cpp processing/FeatureDetection.h
         input/Stream.h
         input/Video.cpp input/Video.h
         input/Image.cpp input/Image.h
+        model/result/Result.h model/result/Result.cpp
+        model/result/DetectionResult.cpp model/result/DetectionResult.h
+        model/result/RecognitionResult.cpp model/result/RecognitionResult.h
+        model/processing/FeatureMatchingModel.cpp model/processing/FeatureMatchingModel.h
+        model/processing/ImageHashModel.cpp model/processing/ImageHashModel.h
+        processing/ImageProcessing.h
+        processing/detection/ObjectDetection.cpp processing/detection/ObjectDetection.h
+        processing/recognition/MatchRecognition.cpp processing/recognition/MatchRecognition.h
+        processing/recognition/HashRecognition.cpp processing/recognition/HashRecognition.h
+        processing/recognition/HybridRecognition.cpp processing/recognition/HybridRecognition.h
         thread/StreamWorker.cpp thread/StreamWorker.h
         util/CompanionError.h
         util/Util.cpp util/Util.h
         util/Definitions.h
         util/exportapi/ExportAPIDefinitions.h
-        model/processing/ImageHashModel.cpp model/processing/ImageHashModel.h
-        processing/HashDetection.cpp processing/HashDetection.h
-        algo/hashing/LSH.cpp algo/hashing/LSH.h
-        algo/hashing/Hashing.h processing/HybridDetection.cpp processing/HybridDetection.h util/CompanionException.cpp util/CompanionException.h)
+        util/CompanionException.cpp util/CompanionException.h)
 
 # Create MSVC filter
 if(MSVC)
@@ -70,7 +76,7 @@ if(UNIX)
 endif()
 
 # Add target properties
-set_property(TARGET Companion PROPERTY FOLDER "libCompanion")
+set_property(TARGET Companion PROPERTY FOLDER "Companion")
 
 # add install instructions
 install(TARGETS Companion EXPORT CompanionConfig
