--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libCompanionSamples"]
-	path = libCompanionSamples
+[submodule "CompanionSamples"]
+	path = CompanionSamples
 	url = https://github.com/LibCompanion/CompanionSamples.git
