Fix doxy configuration

--- a/doc/doxygen.conf
+++ b/doc/doxygen.conf
@@ -51,7 +51,7 @@ PROJECT_BRIEF          = "Companion is an object recognition framework written w
 # pixels and the maximum width should not exceed 200 pixels. Doxygen will copy
 # the logo to the output directory.
 
-PROJECT_LOGO           = "C:/Users/kurtb/Documents/GitHub Projects/LibCompanion/Companion/doc/companion_logo_80x80.jpg"
+PROJECT_LOGO           = "companion_logo_80x80.jpg"
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) path
 # into which the generated documentation will be written. If a relative path is
